--- a/src/css/tree.css
+++ b/src/css/tree.css
@@ -8,7 +8,9 @@
 .tree {
   /* Units in CSS: https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Values_and_units */
   font-size: 1rem;
-  font-family: helvetica, arial, sans-serif;
+  /* Explicitly removed helvetica since it would not
+     play ball in being vertically centered on Linux. */
+  font-family: arial, sans-serif;
   line-height: 1.4;
 }
 
@@ -18,6 +20,13 @@
   /* By default input fields do not inherit font features */
   font-size: inherit;
   font-family: inherit;
+  height: 2em;
+}
+
+.tree input[type="checkbox"] {
+  height: 2em;
+  padding: 0;
+  margin: 0;
 }
 
 .tree button,
@@ -28,6 +37,7 @@
   background-color: #e0e1e2;
   color: rgba(0,0,0,.8);
   border-radius: 3px;
+  height: 2em;
 }
 
 .tree button:disabled,
@@ -78,13 +88,32 @@
 
 /** ----  Actual Content Styles ---- */
 
-.tree fieldset {
+.tree fieldset.config {
   border: none;
   padding: 0;
+  margin: 0;
+  line-height: 2em;
+  height: 2em;
 }
 
-.tree fieldset label {
-  line-height: 1.4;
+/* 
+  Note that vertically aligning a checkbox and its
+  label turns out to be hideously complicated.
+  I needed to add vertical-align: middle to both the
+  checkbox and the label so it would even do anything
+  at all.
+  This was based on https://stackoverflow.com/a/494922/1996 .
+  Madness.
+*/
+
+.tree .config label input {
+  vertical-align: middle;
+  margin-right: 6px;
+}
+
+.tree .config label span {
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .breadcrumbs > span:not(:last-child)::after {
@@ -112,7 +141,6 @@
 .searchbox input[type=search] {
   border: none;
   flex-grow: 1;
-  height: 1.4em;
   background-color: inherit;
 }
 
@@ -155,8 +183,9 @@
 }
 
 .nc > a, .nc > a:hover, .nc > a:active, .nc > a:visited {
-  color: #666;
-}
+  color: #  /* Need to align the baseline, otherwise the text
+  is not really centered vertically */
+
 
 .nc > a:before {
   content: '●'; /* BLACK CIRCLE, 25CF */
@@ -238,8 +267,9 @@
   word-wrap: break-word;
   /* min-width (or a similar trick) is required to make the cursor show in Chrome when the element is empty */
   min-width: 20px;
-  /* leaves space for the bullet since that is positioned absolute */
-  margin-left: calc(2ch + 6px); /* bullet width + the padding */
+  /* leaves s  /* Need to align the baseline, otherwise the text
+     is not really centered vertically */
+ calc(2ch + 6px); /* bullet width + the padding */
   padding-right: 6px;
   padding-left: 2px;
 }
@@ -422,6 +452,8 @@ tree-opmlimport-dialog {
   width: 400px;
   padding: 6px;
 }
+  /* Need to align the baseline, otherwise the text
+     is not really centered vertically */
 
 tree-opmlimport-dialog .error {
   color: red;
@@ -523,6 +555,14 @@ tree-opmlimport-dialog h1 {
     padding-left: 0;
     padding-right: 0;
   }  
+
+  .tree nav {
+    flex-wrap: wrap;
+  }
+
+  .tree .config label span {
+    display: none;
+  }
 
 }
 
